timelimit (1.2-1) unstable; urgency=low

  * New upstream version.  Closes: #494629.

 -- Peter Pentchev <roam@ringlet.net>  Fri, 22 Aug 2008 17:09:31 +0300

timelimit (1.1-3) unstable; urgency=low

  * Fix the watchfile
  * Remove the $Ringlet VCS tags from the watchfile and the rules file
  * Bump standards version to 3.8.0 (no changes)
  * Leave "noopt" and "nostrip" option processing to dpkg-buildpackage
  * Honor the "werror" build option
  * Enable build hardening, disabled by the "nohardening" build option
  * Use debhelper 7 to minimize the rules file
  * Convert the copyright to the machine-parseable format and bump
    the Debian packaging copyright year

  * debian/compat
    - bump the debhelper compatibility level to 7
  * debian/control
    - standards version 3.8.0 (no changes)
    - bump the debhelper dependency to version 7
  * debian/copyright
    - fully convert this file to the machine-parseable format
    - bump the debian/* copyright year
  * debian/rules
    - remove the $Ringlet VCS tag
    - let dpkg-buildpackage handle the "noopt" and "nostrip" options and
      set the default CFLAGS
    - pass -Werror to the C compiler if the non-standard "werror" option
      is set in DEB_BUILD_OPTIONS
    - enable build hardening unless "nohardening" is set in DEB_BUILD_OPTIONS
    - use debhelper 7's "dh" wrapper for most tasks
  * debian/watch
    - remove a blank line so that the first non-comment line is indeed
      the "version" one as uscan requires
    - remove the $Ringlet VCS tag

 -- Peter Pentchev <roam@ringlet.net>  Fri, 18 Jul 2008 14:35:08 +0300

timelimit (1.1-2) unstable; urgency=low

  * Conflict with netpipes (Closes: #457444).

 -- Peter Pentchev <roam@ringlet.net>  Sun, 23 Dec 2007 03:06:56 +0200

timelimit (1.1-1) unstable; urgency=low

  * Initial release (Closes: #453290).

 -- Peter Pentchev <roam@ringlet.net>  Wed, 19 Dec 2007 17:34:32 +0200